[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pinchon.gd" type="Script" id=1]
[ext_resource path="res://Recursos/Enemies/spikeMan_walk1.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Enemies/spikeMan_walk2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Caminar",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.79029, 2.26062 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.6659
height = 10.2679

[node name="Pinchon" type="KinematicBody2D"]
collision_layer = 2147483656
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -38.9087 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Caminar"
frame = 1

[node name="Colision Pies" type="CollisionShape2D" parent="."]
position = Vector2( 0.817579, -2.30409 )
shape = SubResource( 2 )

[node name="DetectorVacio" type="RayCast2D" parent="."]
modulate = Color( 0.964706, 0.0352941, 0.0352941, 1 )
self_modulate = Color( 0.894118, 0, 0, 1 )
position = Vector2( 35.1873, -5.80594 )
z_index = 35
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="DetectorSolido" type="RayCast2D" parent="."]
modulate = Color( 0.964706, 0.0352941, 0.0352941, 1 )
self_modulate = Color( 0.894118, 0, 0, 1 )
position = Vector2( 28.1082, -24.2115 )
z_index = 35
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 4

[node name="DetectorJugador" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorJugador"]
position = Vector2( 0.264862, -23.5731 )
shape = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectorJugador"]
polygon = PoolVector2Array( 7.06004, -42.8416, -0.0913353, -71.4471, -7.77244, -41.7821 )
[connection signal="body_entered" from="DetectorJugador" to="." method="_on_DetectorJugador_body_entered"]
